# huweibot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.venv_smoke/: pyvenv.cfg
.venv_smoke 2/: pyvenv 2.cfg
artifacts/: interface_delta_prune_check.json  last_delta_clip.json  step_0001.json  step_0001_delta_prune.json  step_0001_obs_digest.json  step_0001_planner_in_delta.json  step_0001_planner_in_full.json  step_0001_planner_llm_raw.txt  step_0001_planner_obs_packed.json  step_0001_planner_out.json  step_0001_resolve.json  step_9000_obs_digest.json  step_9000_planner_in_full.json  step_9000_planner_obs_packed.json  step_9001_delta_prune.json  step_9001_obs_digest.json  step_9001_planner_in_delta.json  step_9001_planner_obs_packed.json  step_9001_planner_out.json  tasks.json  tasks_at.json  tasks_test.json  tasks_v2.json  vlm_raw.txt
config/: macros.yaml
docs/: PROVIDERS.md
huweibot/: __init__.py  _pydantic_compat.py  config.py  main.py  pydantic_compat.py
huweibot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: action_roundtrip_selftest.py  calibrate_phone_screen.py  calibrate_px_to_mm.py  calibrate_screen.py  check_interface_consistency.py  click_test.py  click_verify_demo.py  home_zero.py  inspect_elements.py  manual_move.py  move_to.py  phone_dry_run.py  preview_camera.py  test_cursor.py
tests/: conftest.py  test_branding_and_compat.py  test_openai_compat_matrix.py  test_openai_compat_profiles.py  test_openai_compat_provider.py  test_providers_router.py  test_repo_hygiene.py
(+49 files in other folders)
